tests/testdata/networking/sidecar-without-service/mesh.yaml
rootNamespace: istio-config
defaultServiceExportTo:
  - "*"
defaultVirtualServiceExportTo:
  - "*"
defaultDestinationRuleExportTo:
  - "*"
